--- a/gig_reviews/templates/gig_reviews/artist.html
+++ b/gig_reviews/templates/gig_reviews/artist.html
@@ -1,5 +1,5 @@
+{% extends "base.html" %}
+
+{% block content %}
 <h1>This is the Artists page</h1>
-<a href="{% url 'home' %}">Home</a>
-<a href="{% url 'venue' %}">Venue</a>
-<a href="{% url 'review' %}">Review</a>
-<a href="{% url 'profile' %}">Profile</a>
+{% endblock %}
