--- a/gig_reviews/templates/gig_reviews/index.html
+++ b/gig_reviews/templates/gig_reviews/index.html
@@ -1,6 +1,5 @@
+{% extends "base.html" %}
+
+{% block content %}
 <h1>This is the home page</h1>
-<a href="{% url 'home' %}">Home</a>
-<a href="{% url 'venue' %}">Venue</a>
-<a href="{% url 'artist' %}">Artist</a>
-<a href="{% url 'review' %}">Review</a>
-<a href="{% url 'profile' %}">Profile</a>
+{% endblock %}
