--- a/gig_reviews/templates/gig_reviews/review.html
+++ b/gig_reviews/templates/gig_reviews/review.html
@@ -1,5 +1,5 @@
+{% extends "base.html" %}
+
+{% block content %}
 <h1>This is where the gig review form will go for submission</h1>
-<a href="{% url 'home' %}">Home</a>
-<a href="{% url 'venue' %}">Venue</a>
-<a href="{% url 'artist' %}">Artist</a>
-<a href="{% url 'profile' %}">Profile</a>
+{% endblock %}
