--- a/gig_reviews/templates/gig_reviews/review.html
+++ b/gig_reviews/templates/gig_reviews/review.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>This is where the gig review form will go for submission</h1>
+<h1>Submit a Gig Review</h1>
+<form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Submit</button>
+  </form>
 {% endblock %}
