--- a/gig_reviews/templates/gig_reviews/profile.html
+++ b/gig_reviews/templates/gig_reviews/profile.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>This is the user's profile page</h1>
+<h1>Your Profile</h1>
+<form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Save Profile</button>
+  </form>
 {% endblock %}
