--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,5 +31,8 @@
 
 <footer>
     <p>&copy; 2025 /*axdesigns*/</p>
+
+<script src="{% static 'your_app/js/script.js' %}"></script>
+
 </body>
 </html>
