--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
 <footer>
     <p>&copy; 2025 /*axdesigns*/</p>
 
-<script src="{% static 'your_app/js/script.js' %}"></script>
+<script src="{% static '/js/script.js' %}"></script>
 
 </body>
 </html>
