--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,8 @@
     Hello {{ user.username }} |
     <a href="{% url 'profile' %}">Profile</a> |
     <a href="{% url 'artist' %}">Artist</a> |
-    <a href="{% url 'review' %}">Review</a> |
+    <a href="{% url 'venue' %}">Venue</a> |
+    <a href="{% url 'review' %}">New Gig Review</a> |
     <a href="{% url 'logout' %}">Logout</a> 
   {% else %}
     <a href="{% url 'login' %}">Login</a> |
@@ -31,6 +32,7 @@
 
 <footer>
     <p>&copy; 2025 /*axdesigns*/</p>
+</footer>
 
 <script src="{% static '/js/script.js' %}"></script>
 
