--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Praise The Loud</title>
 </head>
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
 <body>
     
 <nav>
@@ -14,8 +15,8 @@
   {% if user.is_authenticated %}
     Hello {{ user.username }} |
     <a href="{% url 'profile' %}">Profile</a> |
-    <a href="{% url 'artist' %}">Artist</a> |
-    <a href="{% url 'venue' %}">Venue</a> |
+    <a href="{% url 'artist' %}">Find Artist</a> |
+    <a href="{% url 'venue' %}">Find Venue</a> |
     <a href="{% url 'review' %}">New Gig Review</a> |
     <a href="{% url 'logout' %}">Logout</a> 
   {% else %}
