--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 /* Global settings*/
 body {
-    background-color: black;
-    color: white;
+    background-color: darkgrey;
+    color: black;
 }
