Debug contact form not appearing

--- a/gig_reviews/templates/gig_reviews/contact_modal.html
+++ b/gig_reviews/templates/gig_reviews/contact_modal.html
@@ -16,7 +16,7 @@
   {% csrf_token %}
 
   <label for="user_type">Who are you?</label>
-  <select name="user_type" id="user_type" onchange="showSelectedForm()">
+  <select name="user_type" id="user_type">
     <option value="">-- Select --</option>
     <option value="fan">Fan</option>
     <option value="artist">Artist</option>
