--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,8 @@
 
 <footer style="text-align: center; margin-top: 40px;">
   <a href="{% url 'contact' %}">Contact</a>
-  <p>&copy; 2025 /*axdesigns*/</p>
+  <p>/*axdesigns*/</p>
+  <p>&copy; 2025</p>
 </footer>
 
 <!-- Include JavaScript files -->
