--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,11 @@
     <title>Praise The Loud</title>
 </head>
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
-<body>
+<body>  
     
 <nav>
-  <a href="{% url 'home' %}">Home</a> |
+  <a href="{% url 'home' %}">Home</a>
+  <a href="{% url 'about' %}">About</a> |
   {% if user.is_authenticated %}
     Hello {{ user.username }} |
     <a href="{% url 'profile' %}">Profile</a> |
@@ -38,7 +39,6 @@
 </footer>
 
 <!-- Include JavaScript files -->
-<script src="{% static '/js/script.js' %}"></script>
-
+<script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
