Add serach function to navbar Create search form and add to view.py Create new search_results.html for results

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,11 @@
     <a href="{% url 'login' %}">Login</a> |
     <a href="{% url 'signup' %}">Sign Up</a>
   {% endif %}
+  <form method="get" action="{% url 'search' %}">
+    {{ form.search_type }}
+    {{ form.query }}
+    <button type="submit">Search</button>
+  </form>
 </nav>
 
 
