Add meta tags to base.html Add icon to title

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Praise The Loud</title>
+    <!--Meta tags for search engines-->
+      <meta name="description" content="Battle of the Emerging Rock Bands in 2025">
+      <meta name="Keywords" content="Battle of the bands, emerging rock and metal bands,rock and roll,heavy metal,independant fesitvals">
+      <meta name="author" content="axdesigns">
+  <title>Praise The Loud</title>
+  <link rel="icon" type="image/png" href="https://res.cloudinary.com/dqde3a83z/image/upload/e_background_removal/f_png/v1748099727/praise-the-loud-logo-v8.1_rrk4p6.png">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
+
 <body>  
     
 <nav>
