Change icon in title

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,8 @@
       <meta name="Keywords" content="Battle of the bands, emerging rock and metal bands,rock and roll,heavy metal,independant fesitvals">
       <meta name="author" content="axdesigns">
   <title>Praise The Loud</title>
-  <link rel="icon" type="image/png" href="https://res.cloudinary.com/dqde3a83z/image/upload/e_background_removal/f_png/v1748099727/praise-the-loud-logo-v8.1_rrk4p6.png">
+  <link rel="icon" type="image/png" href="https://res.cloudinary.com/dqde3a83z/image/upload/t_praise-the-loud-trans/v1748101049/ptl-logo-trans_dpaf4h.png">
+
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
