Add hero image and text with some styling

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,7 @@
       <meta name="Keywords" content="Battle of the bands, emerging rock and metal bands,rock and roll,heavy metal,independant fesitvals">
       <meta name="author" content="axdesigns">
   <title>Praise The Loud</title>
-  <link rel="icon" type="image/png" href="https://res.cloudinary.com/dqde3a83z/image/upload/t_praise-the-loud-trans/v1748101049/ptl-logo-trans_dpaf4h.png">
-
+  <link rel="icon" type="image/png" href="https://res.cloudinary.com/dqde3a83z/image/upload/v1748101449/praise-the-loud-logo-v8.1_ok6gen.png">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
@@ -38,8 +37,7 @@
 </nav>
 
 
- <!-- HERE is where page-specific content appears -->
-  <div class="content">
+  <div class="content" >
     {% block content %}{% endblock %}
   </div>
 
