--- a/gig_reviews/templates/gig_reviews/index.html
+++ b/gig_reviews/templates/gig_reviews/index.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>This is the home page</h1>
+<div class="hero-image">
+    <img src="https://res.cloudinary.com/dqde3a83z/image/upload/praise-the-loud-logo_q951jy.png" alt="Praise The Loud hero imagae">
+    <div class="hero-text">
+        <h1><em>Hear the Noise - Praise it Louder!</em></h1>
+        <p>Praise the artists with your reviews of their gigs</p>
+    </div>
+</div>
+
 {% endblock %}
