--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,37 @@
 /* Global settings*/
+body {
+    background-color: black;
+    color: white;
+    font-size: 20px;
+}
 
-/*body {
-    background-color: darkgrey;
-    color: black;
-}*/
+/* Navigation bar */
+
+/*Hero image and text*/
+.hero-image {
+    margin-top: 40px;
+    margin-bottom: 20px;
+    max-height: 80vh;
+    overflow: hidden;
+}
+.hero-image img {
+    display: block;
+    align-self: center;
+    height: 50vh;
+    margin-left:auto;
+    margin-right: auto;
+}
+.hero-text h1 {
+    text-align: center;
+    font-size: 2.5em;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    color: red;
+}
+.hero-text p {
+    text-align: center;
+    font-size: 1.2em;
+    margin-top: 10px;
+}
+
