Add navbar styling with collapsable menue

--- a/gig_reviews/templates/gig_reviews/index.html
+++ b/gig_reviews/templates/gig_reviews/index.html
@@ -5,8 +5,8 @@
     <img src="https://res.cloudinary.com/dqde3a83z/image/upload/praise-the-loud-logo_q951jy.png" alt="Praise The Loud hero imagae">
     <div class="hero-text">
         <h1><em>Hear the Noise - Praise it Louder!</em></h1>
-        <p>Praise the artists with your reviews of their gigs</p>
+        <p><em>Praise the artists with your reviews of their gigs</em></p>
+        <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png"alt="red rock horns" class="horns">
     </div>
 </div>
-
 {% endblock %}
