--- a/templates/base.html
+++ b/templates/base.html
@@ -10,13 +10,75 @@
       <meta name="Keywords" content="Battle of the bands, emerging rock and metal bands,rock and roll,heavy metal,independant fesitvals">
       <meta name="author" content="axdesigns">
   <title>Praise The Loud</title>
-  <link rel="icon" type="image/png" href="https://res.cloudinary.com/dqde3a83z/image/upload/v1748101449/praise-the-loud-logo-v8.1_ok6gen.png">
+  <link rel="icon" type="image/png" href="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-..." crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
-<body>  
+<body>
+  
+<!-- Nav Bar -->
+<nav class="navbar sticky-top bg-dark border-bottom border-body" data-bs-theme="dark">
+  <div class="container-fluid">
+    <a class="navbar-brand me-5" href="{% url 'home' %}">Praise the Loud</a>
+
+      {% if user.is_authenticated %}
+        <span class="navbar-text text-white me-auto">Hello {{ user.username }}</span>
+      {% endif %}
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+
+        <!-- Always visible -->
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'home' %}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'about' %}">About</a>
+        </li>
+
+        <!-- Only show if logged in -->
+        {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'review' %}">New Gig Review</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+          </li>
+
+        <!-- If not logged in -->
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+          </li>
+        {% endif %}
+
+        <!-- Search form -->
+        <li class="nav-item">
+          <form class="d-flex ms-lg-3" method="get" action="{% url 'search_view' %}">
+            {{ form.search_type }}
+            {{ form.search_term }}
+            <button class="btn btn-outline-light ms-2" type="submit">Search</button>
+          </form>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
     
-<nav>
+<!--<nav>
   <a href="{% url 'home' %}">Home</a>
   <a href="{% url 'about' %}">About</a> |
   {% if user.is_authenticated %}
@@ -34,7 +96,7 @@
     <button type="submit">Search</button>
   </form>
 
-</nav>
+</nav>-->
 
 
   <div class="content" >
@@ -49,5 +111,9 @@
 
 <!-- Include JavaScript files -->
 <script src="{% static 'js/script.js' %}"></script>
+
+<!-- Bootstrap Bundle with Popper (required for navbar toggle) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
+
 </body>
 </html>
