Add responsive Bootstrap grids to navbar, footer and hero image

--- a/gig_reviews/templates/gig_reviews/index.html
+++ b/gig_reviews/templates/gig_reviews/index.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="hero-image">
-    <img src="https://res.cloudinary.com/dqde3a83z/image/upload/praise-the-loud-logo_q951jy.png" alt="Praise The Loud hero imagae">
-    <div class="hero-text">
-        <h1><em>Hear the Noise - Praise it Louder!</em></h1>
-        <p><em>Praise the artists with your reviews of their gigs</em></p>
-        <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png"alt="red rock horns" class="horns">
+<div class="container-fluid hero-image">
+    <div row class=" row mx-auto justify-content-center align-items-center">
+        <div class="col-12 text-center">
+            <img src="https://res.cloudinary.com/dqde3a83z/image/upload/praise-the-loud-logo_q951jy.png" alt="Praise The Loud hero imagae">
+            <h1><em>Hear them Loud - Praise them Louder!</em></h1>
+            <p><em>Praise the artists with your reviews of their gigs</em></p>
+            <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png"alt="red rock horns" class="horns">
+        </div>
     </div>
 </div>
 {% endblock %}
