--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,10 +2,41 @@
 body {
     background-color: black;
     color: white;
-    font-size: 20px;
+    font-size: 12px;
+    max-width: 1400px;
+    margin: 0 auto;
+}
+h1 {
+    color: red;
 }
 
 /* Navigation bar */
+.navbar-brand {
+    color: #B9D2C9;
+}
+.navbar-brand:hover {
+    color: #ff0000;
+}
+.navbar {
+    margin-top: 1%;
+    margin-bottom: 1%;
+    background-color: #a9a9a9;
+}
+.nav-item {
+    color: #B9D2C9;
+    text-decoration: none;
+    font-size: 1.1rem;
+}
+.nav-item:hover {
+    color: #ff0000;
+}
+.nav-item a {
+    color: #B9D2C9;
+    text-decoration: none;
+}
+.nav-item a:hover {
+    color: #ff0000;
+}
 
 /*Hero image and text*/
 .hero-image {
@@ -15,31 +46,27 @@ body {
     overflow: hidden;
 }
 .hero-image img {
-    display: block;
-    align-self: center;
     height: 50vh;
-    margin-left:auto;
-    margin-right: auto;
 }
-.hero-text h1 {
-    text-align: center;
-    font-size: 2.5em;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    margin-left: auto;
-    color: red;
+.hero-image p {
+    font-size : 20px;
 }
-.hero-text p {
-    text-align: center;
-    font-size: 1.2em;
-    margin-top: 10px;
-}
+
 .horns {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
     margin-top: 20px;
-    max-height: 50px;
+    max-height: 100px;
+}
+
+/**Footer */
+.footer-contact {
+    color: #B9D2C9;
+    text-decoration: none;
+    font-size: 1.5rem;
+}
+.footer-contact:hover {
+    color: #ff0000;
+}
+.footer-p {
+    font-size: 1.2rem;
 }
 
