Add styling to about page Change hero image

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,6 +57,11 @@ h1 {
     max-height: 100px;
 }
 
+/*About page*/
+.about{
+    font-size: 1.2rem;
+}
+
 /**Footer */
 .footer-contact {
     color: #B9D2C9;
