--- a/gig_reviews/templates/gig_reviews/about.html
+++ b/gig_reviews/templates/gig_reviews/about.html
@@ -4,10 +4,18 @@
 {% block title %}About{% endblock %}
 
 {% block content %}
-  <h1>About Praise The Loud</h1>
-    <p>Welcome to your Gig Reviews platform! 
-    <p>Praise the Loud is your space to shout about the live shows that moved you. Whether you're a fan, artist, or venue, we celebrate the raw energy of live performance and the voices that bring it to life. Here, reviews matter, stories echo, and the loudest praise gets heard.</p>
-    <p>We are dedicated to providing a space for music lovers to share their experiences and opinions on live performances.</p>
-    <p>Our mission is to connect fans with artists and venues, helping everyone discover the best gigs in town.</p>
-    <p>Thank you for being a part of our community!</p>
+<div class="container-fluid about">
+  <div class="row mx-auto justify-content-center align-items-center">
+    <div class="text-center col-12">
+      <h1>About</h1>
+        <p>Welcome to your Gig Reviews platform! 
+        <p>Praise the Loud is your space to shout about the live shows that moved you.
+        <p>Whether you're a fan, artist, or venue, we celebrate the raw energy of live performance and the voices that bring it to life.
+        <p>Here, reviews matter, stories echo, and the loudest praise gets heard.</p>
+        <p>We are dedicated to providing a space for music lovers to share their experiences and opinions on live performances.</p>
+        <p>Our mission is to connect fans with artists and venues, helping everyone discover the best gigs in town.</p>
+        <p>Thank you for being a part of our community!</p>
+    </div>
+  </div>
+</div>
 {% endblock %}
