Fix footer bootstrap add margins between horns and <p> in hero class Add troll message to about page

--- a/gig_reviews/templates/gig_reviews/about.html
+++ b/gig_reviews/templates/gig_reviews/about.html
@@ -15,6 +15,9 @@
         <p>We are dedicated to providing a space for music lovers to share their experiences and opinions on live performances.</p>
         <p>Our mission is to connect fans with artists and venues, helping everyone discover the best gigs in town.</p>
         <p>Thank you for being a part of our community!</p>
+        <hr>
+        <p>In the spirit of this sight if you don't have anything positive to say don't say it. Any abuse will be silenced!</p>
+        <hr>
     </div>
   </div>
 </div>
