--- a/gig_reviews/templates/gig_reviews/index.html
+++ b/gig_reviews/templates/gig_reviews/index.html
@@ -7,7 +7,7 @@
             <img src="https://res.cloudinary.com/dqde3a83z/image/upload/ptl-hero-image_eccbob.png" alt="Praise The Loud hero imagae">
             <h1><em>Hear them Loud - Praise them Louder!</em></h1>
             <p><em>Praise the artists with your reviews of their gigs</em></p>
-            <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png"alt="red rock horns" class="horns">
+            <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png"alt="red rock horns" class="horns mt-0">
         </div>
     </div>
 </div>
