--- a/templates/base.html
+++ b/templates/base.html
@@ -103,8 +103,8 @@
     {% block content %}{% endblock %}
   </div>
 
-<footer>
-  <div row style="container-fluid">
+<footer class="footer container-fluid">
+  <div class="row mx-auto justify-content-center align-items-center">
     <div class=" text-center col-md-12">
       <a class="footer-contact" href="{% url 'contact' %}">Contact</a>
       <p class="footer-p">&copy; /*axdesigns*/ 2025</p>
