--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,10 +50,10 @@ h1 {
 }
 .hero-image p {
     font-size : 20px;
+    margin-bottom: 0;
 }
 
 .horns {
-    margin-top: 20px;
     max-height: 100px;
 }
 
@@ -63,6 +63,12 @@ h1 {
 }
 
 /**Footer */
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%; 
+}
 .footer-contact {
     color: #B9D2C9;
     text-decoration: none;
