Add media query for screen size 320px and above with styling

--- a/gig_reviews/templates/gig_reviews/index.html
+++ b/gig_reviews/templates/gig_reviews/index.html
@@ -5,7 +5,7 @@
     <div row class=" row mx-auto justify-content-center align-items-center">
         <div class="col-12 text-center">
             <img src="https://res.cloudinary.com/dqde3a83z/image/upload/ptl-hero-image_eccbob.png" alt="Praise The Loud hero imagae">
-            <h1>Hear them Loud - Praise them Louder!</h1>
+            <h1>Hear them Loud Praise them Louder!</h1>
             <p>Praise the artists with your reviews of their gigs</p>
             <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png"alt="red rock horns" class="horns mt-0">
         </div>
