--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,10 +26,10 @@ h1 {
     margin-bottom: 1%;
     background-color: #a9a9a9;
 }
-.nav-item {
-    color: #B9D2C9;
+.navbar-text{
+    color: red;
     text-decoration: none;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
 }
 .nav-item:hover {
     color: #ff0000;
@@ -37,10 +37,74 @@ h1 {
 .nav-item a {
     color: #B9D2C9;
     text-decoration: none;
+    font-size: 1.2rem;
 }
 .nav-item a:hover {
     color: #ff0000;
 }
+.nav-search {
+    color: #B9D2C9;
+    border-color: red;
+    font-size: 1.2rem;
+}
+.nav-btn{
+    color: #B9D2C9;
+    border-color: red;
+    background-color: black;
+    font-size: 1.2rem;
+}
+.nav-btn:hover {
+    color: #ff0000;
+    background-color: black;
+    border-color: red;
+}
+/* search bar*/
+.nav-search {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem; /* spacing between stacked elements */
+
+}
+.nav-search select {
+    color: #B9D2C9;
+    border-color: red;
+    background-color: black;
+    font-size: 1.2rem;
+    text-align: center;
+}
+.nav-search select:focus {
+    outline: none;
+    border-color: red;
+    background-color: black;
+    font-size: 1.2rem;
+    box-shadow: none;
+    color: #ff0000;
+}
+.nav-search input {
+    color: #B9D2C9;
+    border-color: red;
+    background-color: black;
+    font-size: 1.2rem;
+    width: 100%;
+}
+.nav-search input:focus {
+    border-color: red;
+    outline: none;
+    box-shadow: none;
+    background-color: black;
+    color: #B9D2C9;
+}
+form.d-flex select {
+  width: 120px;
+  min-width: unset;
+}
+
+form.d-flex input[type="text"] {
+  flex: 1;
+  /*min-width: 200px;  or remove this line to let flex handle it */
+}
+
 
 /*Hero image and text*/
 .hero-image {
@@ -110,6 +174,19 @@ h1 {
         font-size: 0.7rem;
     }
 }
+
+/* Small screens: Stack items vertically */
+@media (max-width: 425px) {
+    .nav-search {
+        flex-direction: column;
+        align-items: center;
+    }
+    .nav-search > * {
+    width: 100%;
+    max-width: 300px; /* Optional: keeps it tidy */
+  }
+}
+
 /*2 Small mobile devices (phones, 420px and above)*/
 @media screen and (min-width: 425px) {
     .hero-image img {
@@ -135,3 +212,5 @@ h1 {
         font-size: 1rem;
     }
 }
+/*3 Small mobile devices (phones, 420px and above)
+@media (max-width: 576px)*/
