--- a/static/css/style.css
+++ b/static/css/style.css
@@ -132,21 +132,25 @@ form.d-flex input[type="text"] {
 .signup-item {
     font-size: 1.2rem;
     max-width: 600px;
+    color: #B9D2C9;
 }
+/* Help text */
+.helptext {
+    font-size: 1rem;
+    color: #B9D2C9;
+    margin-top: 0.25rem;
+    margin-bottom: 0.5rem;
+}
+/* Help text list elements */
 .signup-item ul,
 .signup-item ul li {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+    list-style: none;
+    font-size: 1rem;
+    color: #B9D2C9;
+    margin-top: 0.25rem;
+    margin-bottom: 0.75rem;
 }
-.signup-item input.helptext,
-.signup-item select.helptext,
-.signup-item textarea.helptext {
-  margin-top: 0.25rem;
-  padding: 0;
-  font-size: 0.9rem;
-  color: #B9D2C9;
-}
+/* Help text elements */
 .signup-item input,
 .signup-item select,
 .signup-item textarea {
@@ -165,6 +169,7 @@ form.d-flex input[type="text"] {
   box-shadow: none;
   background-color: #111;
 }
+/* Create account button */
 .signup-btn{
     color: #B9D2C9;
     border-color: red;
