--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Login</h1>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Log in</button>
-  </form>
+<div class="container-fluid signin-item">
+  <div class=" row mx-auto justify-content-center align-items-start">
+    <div class="col-12 text-center">
+      <h1>Login</h1>
+      <form method="post" class="d-flex flex-column align-items-stretch">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="signin-btn">Log in</button>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
