--- a/static/css/style.css
+++ b/static/css/style.css
@@ -131,25 +131,32 @@ form.d-flex input[type="text"] {
 /*Sign up / Login pages*/
 .signin-item {
     font-size: 1.2rem;
-    max-width: 600px;
+    max-width: 700px;
     color: #B9D2C9;
 }
 /* Help text */
 .helptext {
-    font-size: 1rem;
+    /*font-size: 1.2em;*/
     color: #B9D2C9;
-    margin-top: 0.25rem;
-    margin-bottom: 0.5rem;
+    /*margin-top: 0.25rem;
+    margin-bottom: 0.5rem;*/
 }
 /* Help text list elements */
 .signin-item ul,
-.signin-item ul li {
+.signin-item ul li 
+/*.helptext,
+.helptext li*/{
     list-style: none;
-    font-size: 1rem;
+    /*font-size: 1rem;*/
     color: #B9D2C9;
     margin-top: 0.25rem;
     margin-bottom: 0.75rem;
 }
+/*.signin-item ul.helptext {
+    padding-left: 0;
+    margin-top: 0.25rem;
+    margin-bottom: 0.5rem;
+}*/
 /* Help text elements */
 .signin-item input,
 .signin-item select,
@@ -176,6 +183,7 @@ form.d-flex input[type="text"] {
     background-color: black;
     font-size: 1.2rem;
     border-radius: 7px;
+    margin-top: 20px;
 }
 .signin-btn:hover {
     color: #ff0000;
