--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,6 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <p>You have been logged out.</p>
-  <a href="{% url 'login' %}">Log in again</a>
+  <div class="container-fluid signin-item">
+    <div class="row mx-auto justify-content-center align-items-start">
+      <div class="col-12 text-center">
+        <h1>You have been logged out</h1>
+          <a href="{% url 'login' %}" class="logout">Log in again</a>
+      </div>
+    </div>
+  </div>
 {% endblock %}
+
+
