Change wording on about and home pages Add margin top to h1 tags rrename signin classes and buttons to page classes for useability across all pages

--- a/gig_reviews/templates/gig_reviews/about.html
+++ b/gig_reviews/templates/gig_reviews/about.html
@@ -15,7 +15,7 @@
         <p>We are dedicated to providing a space for music lovers to share their experiences and opinions on live performances.</p>
         <p>Our mission is to connect fans with artists and venues, helping everyone discover the best gigs in town.</p>
         <hr>
-        <p>In the spirit of this sight if you don't have anything positive to say don't say it. Any abuse will be silenced!</p>
+        <p>In the spirit of this site if you don't have anything positive or respectful to say don't say it. Any abuse will be silenced!</p>
         <hr>
     </div>
   </div>
