--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,7 @@ body {
 h1 {
     color: red;
     font-family: 'Rock Salt', sans-serif;
+    margin-top: 20px;
 }
 
 /* Navigation bar */
@@ -129,7 +130,7 @@ form.d-flex input[type="text"] {
 }
 
 /*Sign up / Login pages*/
-.signin-item {
+.page-item {
     font-size: 1.2rem;
     max-width: 700px;
     color: #B9D2C9;
@@ -142,8 +143,8 @@ form.d-flex input[type="text"] {
     margin-bottom: 0.5rem;*/
 }
 /* Help text list elements to adjust spacing and remove bullet points */
-.signin-item ul,
-.signin-item ul li 
+.page-item ul,
+.page-item ul li 
 /*.helptext,
 .helptext li*/{
     list-style: none;
@@ -162,17 +163,17 @@ input:-webkit-autofill:focus {
   border: 1px solid red !important;
 }
 
-/*.signin-item ul.helptext {
+/*.page-item ul.helptext {
     padding-left: 0;
     margin-top: 0.25rem;
     margin-bottom: 0.5rem;
 }*/
 /* Help text elements*/
-.signin-item input[type="text"],
-.signin-item input[type="email"],
-.signin-item input[type="password"],
-.signin-item select,
-.signin-item textarea {
+.page-item input[type="text"],
+.page-item input[type="email"],
+.page-item input[type="password"],
+.page-item select,
+.page-item textarea {
   width: 100%;
   background-color: black !important;
   color: #B9D2C9;
@@ -180,16 +181,16 @@ input:-webkit-autofill:focus {
   font-size: 1.1rem;
   border-radius: 4px;
 }
-.signin-item input:focus,
-.signin-item select:focus,
-.signin-item textarea:focus {
+.page-item input:focus,
+.page-item select:focus,
+.page-item textarea:focus {
   outline: none;
   border-color: red;
   box-shadow: none;
   background-color: #111 !important;
 }
 /* Create account / Login button */
-.signin-btn{
+.page-btn{
     color: #B9D2C9;
     border-color: red;
     background-color: black;
@@ -197,7 +198,7 @@ input:-webkit-autofill:focus {
     border-radius: 7px;
     margin-top: 20px;
 }
-.signin-btn:hover {
+.page-btn:hover {
     color: #ff0000;
     background-color: black;
     border-color: red;
