Add intention and not storing personal details to about page

--- a/gig_reviews/templates/gig_reviews/about.html
+++ b/gig_reviews/templates/gig_reviews/about.html
@@ -17,6 +17,7 @@
         <hr>
         <p>In the spirit of this site if you don't have anything positive or respectful to say don't say it. Any abuse will be silenced!</p>
         <hr>
+        <p>Your personal login information will not be used for any other purpose than to allow you access to this site</p>
     </div>
   </div>
 </div>
